changes en style

--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body{
 .container{
     margin: auto;
     background-color: white;
-    max-width: 700px;
+    max-width: 600px;
+    max-height: 475px;
     display: flex;
     border-radius: 10px;
     margin-top: 7%;
